<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guess The Number</string>
    <string name="action_settings">Settings</string>
    <string name="wlcm">Guess a number between 1 &amp; 100</string>
    <string name="Submit">Submit</string>
    <string name="hint">HINT</string>
    <string name="guesses">Total guesses = 0</string>
    <string name="setrng">Set Range</string>
    <string name="r100">100</string>
    <string name="r1000">1000</string>
    <string name="r10000">10000</string>

</resources>