<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#25313c"
    android:keepScreenOn="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/topmsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/wlcm"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/numberbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topmsg"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:textColor="#ffffff" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/bsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/numberbox"
        android:layout_marginTop="26dp"
        android:text="@string/Submit" />

    <Button
        android:id="@+id/bhint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/numberbox"
        android:layout_marginTop="26dp"
        android:layout_toRightOf="@id/bsubmit"
        android:text="@string/hint" />

    <TextView
        android:id="@+id/totguesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bsubmit"
        android:layout_marginTop="15dp"
        android:text="@string/guesses"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totguesses"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/setrng"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/r100"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/range"
        android:layout_marginTop="16dp"
        android:text="@string/r100"
        android:textAlignment="center" />

    <Button
        android:id="@+id/r1000"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/range"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/r1000"
        android:textAlignment="center" />

    <Button
        android:id="@+id/r10000"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/range"
        android:layout_marginTop="16dp"
        android:text="@string/r10000"
        android:textAlignment="center" />

</RelativeLayout>